# research-hub-mcp

./: CLAUDE.md  Cargo.toml  Cross.toml  README.dev.md  build.rs
.github/workflows/: release.yml
benches/: server_bench.rs
benches/ner/: biomed_gliner_eval.py
benches/re/: README.md  table_extraction_eval.py
benches/re/examples/: sample_re_output.jsonl
cross/: aarch64-unknown-linux-gnu.Dockerfile
examples/: .gitignore  test_ner.ipynb
pdf2text/: .gitignore  README.md  __init__.py  cli.py  grobid.py  models.py  pdf2text.py
pdf2text/notebooks/: convert.ipynb  download.ipynb  examples.ipynb  test.ipynb
plugins/: __init__.py  biorxiv_pdf_downloader.py  common.py  frontiers_pdf_downloader.py  plos_pdf_downloader.py  plugin_runner.py  pnas_pdf_downloader.py  utils.py  wiley_pdf_downloader.py
plugins/downloader/: hindawi_pdf_downloader.py  mdpi_pdf_downloader.py  nature_pdf_downloader.py  oxford_pdf_downloader.py  springer_pdf_downloader.py  wiley_pdf_downloader.py
python/: .gitignore  README.md  pyproject.toml
python/examples/: dois.txt  gliner_biomed_large_v1.0_ncbi_disease.jsonl  test_ner.txt
python/rust_research_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/rust_research_py/pdf2text/: README.md  __init__.py  cli.py
python/rust_research_py/pdf2text/models/: test.ipynb
python/rust_research_py/pdf2text/notebooks/: .gitignore  embedding.ipynb  embedding_local.ipynb
python/rust_research_py/plugins/: __init__.py  plugin_runner.py
python/rust_research_py/plugins/downloader/: biorxiv_pdf_downloader.py  hindawi_pdf_downloader.py  mdpi_pdf_downloader.py  oxford_pdf_downloader.py  plos_pdf_downloader.py  springer_pdf_downloader.py
python/rust_research_py/text2table/: __init__.py  cli.py  config.py  prompts.py  server.py  text2table.py  vllm_wrapper.py
python/rust_research_py/text2table/tests/: test_async_text2table.py  test_prompts.py
python/tests/: __init__.py  test_text2table_config.py  test_text2table_server.py
scripts/: convert_gpt20b_to_visualizer.py
specs/: REFACTORING_SPEC.md
src/: cli.rs  lib.rs  main.rs  python_embed.rs
src/adapters/: meta_search_adapter.rs  pdf_metadata_adapter.rs
src/client/: meta_search.rs  mirror.rs  mod.rs
src/client/providers/: arxiv.rs  biorxiv.rs  core.rs  crossref.rs  google_scholar.rs  mdpi.rs  medrxiv.rs  mod.rs  openalex.rs  openreview.rs  pubmed.rs  pubmed_central.rs  researchgate.rs  sci_hub.rs  semantic_scholar.rs  ssrn.rs  traits.rs  unpaywall.rs
src/config/: mod.rs
src/ports/: metadata_service.rs
src/server/: handler.rs
src/services/: categorization.rs
src/tools/: categorize.rs  code_search.rs  download.rs  list_sources.rs  mod.rs  pdf2text.rs  pdf_metadata.rs  search.rs  search_source.rs  text2table.rs  verify_metadata.rs
tests/: categorization_integration_test.rs  categorization_test.rs  comprehensive_e2e_scenarios.rs  download_cascade_test.rs  e2e_download_flow_test.rs  e2e_test_suite.rs  end_to_end_test.rs  providers_e2e_test.rs  security_tests.rs
text2table/: README.md  __init__.py  cli.py  client.py  prompts.py  text2table.py
text2table/tests/: test_prompt.py  test_prompts.py
visualizer/: package-lock.json  package.json
visualizer/src/: App.tsx
visualizer/src/components/: ColumnMappingEditor.tsx  FileUploader.tsx  Header.tsx  HistorySelector.tsx  NERSampleCard.tsx  NERTextDisplay.tsx  RESampleCard.tsx
visualizer/src/pages/: Home.tsx  NERVisualizer.tsx  REVisualizer.tsx
visualizer/src/types/: index.ts
visualizer/src/utils/: fileParser.ts  historyManager.ts
visualizer/visualizer/public/: sample_ner.jsonl
